--- a/templates/menus/menu--account.html.twig
+++ b/templates/menus/menu--account.html.twig
@@ -19,7 +19,7 @@
 			</svg>
 		</button>
 
-		<div id="sacda-account-dropdown" class="absolute right-0 mt-2 min-w-48 whitespace-nowrap rounded-md shadow-lg bg-white border border-gray-200 focus:outline-none sacda-hide z-50">
+		<div id="sacda-account-dropdown" class="absolute z-100 right-0 mt-2 min-w-48 whitespace-nowrap rounded-md shadow-lg bg-white border border-gray-200 focus:outline-none sacda-hide">
 			{{ menus.menu_links_dropdown(items) }}
 		</div>
 	</div>
