--- a/templates/macros/button.twig
+++ b/templates/macros/button.twig
@@ -7,6 +7,10 @@
  *   {{ btn.button('Submit', { variant: 'primary' }) }}
  *   {{ btn.link('Learn More', '/about', { variant: 'outline', size: 'lg' }) }}
  *   {{ btn.search() }}
+ * 
+ * Variants: default, outline, primary, secondary, ghost, text
+ * Sizes: sm, lg (default is medium)
+ * Options: size, variant, class, icon, icon_position, full_width, disabled, new_tab (link only)
  */
 #}
 
