--- a/templates/page/page--front.html.twig
+++ b/templates/page/page--front.html.twig
@@ -6,18 +6,19 @@
  */
 #}
 {% extends '@sacda/layout/page.html.twig' %}
+{% import '@sacda/macros/button.twig' as btn %}
+{% import '@sacda/macros/search.twig' as search %}
 
 {% block main %}
 	<main role="main" class="front-page w-full">
 		<a id="main-content" tabindex="-1"></a>
 
 		{# Full-viewport carousel with negative margin to go under header #}
-		<div class="w-full -mt-[104px] md:-mt-[128px] min-h-[40vh]">
+		<div class="w-full min-h-[40vh]">
 			{% include '@sacda/blocks/sacda-carousel.html.twig' with {
 			slides: carousel_slides,
 			autoplay_speed: carousel_autoplay_speed,
 			slides_per_view: 3,
-			full_height: true
 		} %}
 		</div>
 
@@ -29,13 +30,11 @@
 						<h2 class="text-3xl uppercase font-bold text-secondary">SEARCH</h2>
 					</div>
 					<div class="w-full md:w-2/3">
-						<form action="/search" method="get" class="flex items-center border-b border-secondary pt-2">
-							<input type="text" name="q" placeholder="Search" class="flex-grow min-h-[50px] bg-transparent border-none text-lg font-light text-secondary focus:ring-0 focus:outline-none placeholder-secondary/70" id="frontSearchInput">
-							<button type="submit" class="h-[50px] w-[60px] border border-secondary bg-transparent hover:bg-primary hover:border-primary hover:text-white transition-colors duration-300 flex justify-center items-center disabled:opacity-50 disabled:cursor-not-allowed" id="frontSearchButton" disabled>
-								<svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" fill="none" viewbox="0 0 24 24" stroke="currentColor">
-									<path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 5l7 7-7 7"/>
-								</svg>
-							</button>
+						<form action="/search" method="get" class="flex items-center pt-2">
+							{{ search.input({
+								id: 'frontSearchInput',
+								variant: 'hero',
+							}) }}
 						</form>
 					</div>
 				</div>
@@ -49,12 +48,9 @@
 							Engage with the rich history of the South Asian Canadian diaspora. Explore stories of immigration, community building, cultural preservation, and the enduring contributions of South Asian Canadians to the fabric of our nation.
 						</p>
 						<div class="flex flex-col md:flex-row gap-5 mt-10 md:mt-14">
-							<a href="/about" class="flex justify-center items-center h-[50px] px-8 border border-secondary text-secondary font-bold uppercase text-sm hover:bg-secondary hover:text-white transition-colors duration-300 w-full md:w-auto">
-								ABOUT
-							</a>
-							<a href="/search/advanced" class="flex justify-center items-center h-[50px] px-8 border border-secondary text-secondary font-bold uppercase text-sm hover:bg-secondary hover:text-white transition-colors duration-300 w-full md:w-auto">
-								ADVANCED SEARCH
-							</a>
+
+							{{ btn.link('About', '/about', { variant: 'outline', class: 'w-full md:w-auto' }) }}
+							{{ btn.link('Advanced Search', '/search/advanced', { variant: 'outline', class: 'w-full md:w-auto' }) }}
 						</div>
 					</div>
 				</div>
@@ -212,9 +208,7 @@
 					Do you have access to materials and/or oral histories of significance you could contribute to our digital archives?
 				</p>
 				<div class="flex justify-center">
-					<a href="/contribute" class="flex justify-center items-center h-[50px] px-8 border border-secondary text-secondary font-bold uppercase text-sm hover:bg-secondary hover:text-white transition-colors duration-300">
-						CONTRIBUTE TO SACDA
-					</a>
+					{{ btn.link('Contribute to SACDA', '/contribute', { variant: 'outline' }) }}
 				</div>
 			</div>
 		</section>
